delete del3, changeName banner, add images, push banner and formular to main

--- a/formular.css
+++ b/formular.css
@@ -8,6 +8,7 @@ body {
     justify-content: center; /*indhold centreret*/
     align-items: center; /*centreret vertikalt*/
     height: 100vh; 
+    overflow: hidden;
 }
 
 /* container til tekst og formular */
